--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -1,3 +1,18 @@
+html,body{
+  margin: 0;
+  margin-left: 8px;
+}
+
+#search{
+  margin-bottom: 20px;
+}
+
+#form{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
 name {
   color: red;
 }
