--- a/src/view/register.html
+++ b/src/view/register.html
@@ -14,19 +14,37 @@
     
     <form action="#" id=" "form-user>
       <section id="form">
-        <input type="text" id="name" class="" placeholder="Name" required />
-        <input type="number" id="" class="" placeholder="CPF" required />
-        <input type="date" id="" class="" placeholder="Birthdate" />
-        <input type="email" id="" class="" placeholder="Email" required />
-        <input type="password" id="" class="" placeholder="Password" required />
-        <input type="text" id="" class="" placeholder="Adress" required />
-        <input type="number" id="" class="" placeholder="Number" required />
-        <input type="text" id="" class="" placeholder="Complement" required />
-        <input type="text" id="" class="" placeholder="City" required />
-        <input type="text" id="" class="" placeholder="State" required />
-        <input type="text" id="" class="" placeholder="Country" required />
-        <input type="number" id="" class="" placeholder="Zipcode" required />
+        <label for="" >Name</label>
+        <input type="text" id="input-name" placeholder="Name" required />
+        <label for="" >CPF</label>
+        <input type="number"  id="input-cpf" placeholder="CPF" required />
+        <label for="" >Birthdate</label>
+        <input type="date" id="input-birthdate" placeholder="Birthdate" />
+        <label for="" >Email</label>
+        <input type="email" id="input-email" placeholder="Email" required />
+        <label for="" >Password</label>
+        <input type="password" id="input-password" placeholder="Password" required />
+        <label for="" >Adress</label>
+        <input type="text" id="input-adress" placeholder="Adress" required />
+        <label for="" >Number</label>
+        <input type="number" id="input-number" placeholder="Number" required />
+        <label for="" >Complement</label>
+        <input type="text" id="input-complement" placeholder="Complement" required />
+        <label for="" >City</label>
+        <input type="text" id="input-city" placeholder="City" required />
+        <label for="" >State</label>
+        <input type="text" id="input-state" placeholder="State" required />
+        <label for="" >Country</label>
+        <input type="text" id="country" placeholder="Country" required />
+        <label for="" >Zipcode</label>
+        <input type="number" id="input-zipcode" placeholder="Zipcode" required />
       </section>
+      <label for="" >Submit</label>
+      <input type="submit" id="id-submit">
     </form>
+    <div class="showAll">
+      <button id="showAll">Show All Registered</button>
+    </div>
+    <script src=""></script>
   </body>
 </html>
