--- a/src/view/toEdit.html
+++ b/src/view/toEdit.html
@@ -7,6 +7,40 @@
     <title>Edit</title>
 </head>
 <body>
-    
+    <button id="edit-id">Edit</button>
+
+    <form action="#" id=" "form-user>
+    <section id="form">
+        <label for="">Id</label>
+        <input type="text" id="input-edit-id">
+        <label for="" >Name</label>
+        <input type="text" id="input-name" placeholder="Rhaissa" required />
+        <label for="" >CPF</label>
+        <input type="number"  id="input-cpf" placeholder="123.456.789.10" required />
+        <label for="" >Birthdate</label>
+        <input type="date" id="input-birthdate" placeholder="06/04/2000" />
+        <label for="" >Email</label>
+        <input type="email" id="input-email" placeholder="rhai@gmail.com" required />
+        <label for="" >Password</label>
+        <input type="password" id="input-password" placeholder="******" required />
+        <label for="" >Adress</label>
+        <input type="text" id="input-adress" placeholder="Av. 24 de Setembro" required />
+        <label for="" >Number</label>
+        <input type="number" id="input-number" placeholder="3877" required />
+        <label for="" >Complement</label>
+        <input type="text" id="input-complement" placeholder="APTO 107" required />
+        <label for="" >City</label>
+        <input type="text" id="input-city" placeholder="Curitiba" required />
+        <label for="" >State</label>
+        <input type="text" id="input-state" placeholder="Paraná" required />
+        <label for="" >Country</label>
+        <input type="text" id="country" placeholder="Brasil" required />
+        <label for="" >Zipcode</label>
+        <input type="number" id="input-zipcode" placeholder="80.010-210" required />
+        <label for=""></label>
+        <input type="submit" id="edit-user" value="Confirm Edition">
+        </section>
+    <button id="delete-user">Delete User</button>
+    </form>
 </body>
 </html>
