viewControllerUser in progress
Starting the viewControllerUser.

--- a/src/view/registerUser.html
+++ b/src/view/registerUser.html
@@ -12,7 +12,7 @@
       <input type="search" id="" placeholder="Search" />
     </div>
     
-    <form action="#" id=" "form-user>
+    <form action="#" id="form" class="form-user">
       <section id="form">
         <label for="" >Name</label>
         <input type="text" id="input-name" placeholder="Name" required />
